# brombeerquark

./: Pipfile  README.md
cpp/subprocess/: .project-commands  CMakeLists.txt  build.sh
cpp/subprocess/src/: cpp-subprocess.cpp  subprocess.hpp
docs/: crosscompilation.org
gpio-utils/: fun-with-filters.py  hc4067mux.py  pygame-multi-thread-test.py  radiosimulator.py  rpm.py  signal-counter.py  test_tfa.py  tfa.py  tkgpiozero.py  tkinter-gpio-mainloop-integration.py
http-gpio/: README.org  index.html  server.py
http-gpio/static/css/: http-gpio.css
http-gpio/static/js/: brombeerquark-gpio.js
opencv/: README.org  setup.py
opencv/bq/opencv/: __init__.py  cv23.py  input.py  util.py
opencv/bq/wasserzaehler/: __init__.py  base.py  calibration.py
opencv/testdata/wasserzaehler/: settings.json
opencv/tests/: test_utils.py
video-player/: CMakeLists.txt  build.sh  test.py
video-player/ilclient/: ilclient.h
video-player/src/: connector.cc  connector.hh  log.cc  log.hh  main.cc  messages.hh  player.cc  player.hh
